parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    TkAnd
    TkDo
    TkEqual
    TkFalse
    TkFi
    TkGuard
    TkIf
    TkNEqual
    TkNot
    TkOd
    TkOr
    TkRead
    TkTrue

Grammar

Rule 0     S' -> block
Rule 1     block -> TkOBlock TkDeclare start TkCBlock
Rule 2     block -> TkOBlock body TkCBlock
Rule 3     body -> assign body
Rule 4     body -> gfor body
Rule 5     body -> gprint body
Rule 6     body -> gprintln body
Rule 7     body -> empty
Rule 8     start -> declaration start
Rule 9     start -> body
Rule 10    empty -> <empty>
Rule 11    declaration -> TkId TkTwoPoints tipo TkSemiColon
Rule 12    declaration -> TkId TkComma listaid TkTwoPoints tipo TkSemiColon
Rule 13    listaid -> TkId TkComma listaid
Rule 14    listaid -> TkId
Rule 15    tipo -> TkInt
Rule 16    tipo -> TkArray TkOBracket TkNum TkSoForth TkNum TkCBracket
Rule 17    assign -> TkId TkAsig expression TkSemiColon
Rule 18    assign -> TkId TkAsig strexp TkSemiColon
Rule 19    assign -> TkId TkAsig array TkSemiColon
Rule 20    array -> TkOBracket inarray TkCBracket
Rule 21    array -> TkOBracket TkNum TkSoForth TkNum TkCBracket
Rule 22    inarray -> TkNum TkComma inarray
Rule 23    inarray -> TkNum
Rule 24    strexp -> TkString TkConcat strexp
Rule 25    strexp -> TkString
Rule 26    expression -> expression TkPlus expression
Rule 27    expression -> expression TkMinus expression
Rule 28    expression -> expression TkMult expression
Rule 29    expression -> expression TkDiv expression
Rule 30    expression -> expression TkMod expression
Rule 31    expression -> expression TkLess expression
Rule 32    expression -> expression TkLeq expression
Rule 33    expression -> expression TkGeq expression
Rule 34    expression -> expression TkGreater expression
Rule 35    expression -> TkOpenPar expression TkClosePar
Rule 36    expression -> TkSize TkOpenPar array TkClosePar
Rule 37    expression -> TkMax TkOpenPar array TkClosePar
Rule 38    expression -> TkMin TkOpenPar array TkClosePar
Rule 39    expression -> TkAtoi TkOpenPar array TkClosePar
Rule 40    expression -> TkNum
Rule 41    expression -> TkId
Rule 42    gfor -> TkFor TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon
Rule 43    gprint -> TkPrint strprint TkSemiColon
Rule 44    gprintln -> TkPrintln strprint TkSemiColon
Rule 45    strprint -> TkString TkConcat strprint
Rule 46    strprint -> TkId TkConcat strprint
Rule 47    strprint -> TkString
Rule 48    strprint -> TkId

Terminals, with rules where they appear

TkAnd                : 
TkArray              : 16
TkArrow              : 42
TkAsig               : 17 18 19
TkAtoi               : 39
TkCBlock             : 1 2
TkCBracket           : 16 20 21
TkClosePar           : 35 36 37 38 39
TkComma              : 12 13 22
TkConcat             : 24 45 46
TkDeclare            : 1
TkDiv                : 29
TkDo                 : 
TkEqual              : 
TkFalse              : 
TkFi                 : 
TkFor                : 42
TkGeq                : 33
TkGreater            : 34
TkGuard              : 
TkId                 : 11 12 13 14 17 18 19 41 42 46 48
TkIf                 : 
TkIn                 : 42
TkInt                : 15
TkLeq                : 32
TkLess               : 31
TkMax                : 37
TkMin                : 38
TkMinus              : 27
TkMod                : 30
TkMult               : 28
TkNEqual             : 
TkNot                : 
TkNum                : 16 16 21 21 22 23 40
TkOBlock             : 1 2
TkOBracket           : 16 20 21
TkOd                 : 
TkOpenPar            : 35 36 37 38 39
TkOr                 : 
TkPlus               : 26
TkPrint              : 43
TkPrintln            : 44
TkRead               : 
TkRof                : 42
TkSemiColon          : 11 12 17 18 19 42 43 44
TkSize               : 36
TkSoForth            : 16 21
TkString             : 24 25 45 47
TkTo                 : 42
TkTrue               : 
TkTwoPoints          : 11 12
error                : 

Nonterminals, with rules where they appear

array                : 19 36 37 38 39
assign               : 3
block                : 42 0
body                 : 2 3 4 5 6 9
declaration          : 8
empty                : 7
expression           : 17 26 26 27 27 28 28 29 29 30 30 31 31 32 32 33 33 34 34 35 42 42
gfor                 : 4
gprint               : 5
gprintln             : 6
inarray              : 20 22
listaid              : 12 13
start                : 1 8
strexp               : 18 24
strprint             : 43 44 45 46
tipo                 : 11 12

Parsing method: LALR

state 0

    (0) S' -> . block
    (1) block -> . TkOBlock TkDeclare start TkCBlock
    (2) block -> . TkOBlock body TkCBlock

    TkOBlock        shift and go to state 2

    block                          shift and go to state 1

state 1

    (0) S' -> block .



state 2

    (1) block -> TkOBlock . TkDeclare start TkCBlock
    (2) block -> TkOBlock . body TkCBlock
    (3) body -> . assign body
    (4) body -> . gfor body
    (5) body -> . gprint body
    (6) body -> . gprintln body
    (7) body -> . empty
    (17) assign -> . TkId TkAsig expression TkSemiColon
    (18) assign -> . TkId TkAsig strexp TkSemiColon
    (19) assign -> . TkId TkAsig array TkSemiColon
    (42) gfor -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon
    (43) gprint -> . TkPrint strprint TkSemiColon
    (44) gprintln -> . TkPrintln strprint TkSemiColon
    (10) empty -> .

    TkDeclare       shift and go to state 3
    TkId            shift and go to state 10
    TkFor           shift and go to state 11
    TkPrint         shift and go to state 12
    TkPrintln       shift and go to state 13
    TkCBlock        reduce using rule 10 (empty -> .)

    body                           shift and go to state 4
    assign                         shift and go to state 5
    gfor                           shift and go to state 6
    gprint                         shift and go to state 7
    gprintln                       shift and go to state 8
    empty                          shift and go to state 9

state 3

    (1) block -> TkOBlock TkDeclare . start TkCBlock
    (8) start -> . declaration start
    (9) start -> . body
    (11) declaration -> . TkId TkTwoPoints tipo TkSemiColon
    (12) declaration -> . TkId TkComma listaid TkTwoPoints tipo TkSemiColon
    (3) body -> . assign body
    (4) body -> . gfor body
    (5) body -> . gprint body
    (6) body -> . gprintln body
    (7) body -> . empty
    (17) assign -> . TkId TkAsig expression TkSemiColon
    (18) assign -> . TkId TkAsig strexp TkSemiColon
    (19) assign -> . TkId TkAsig array TkSemiColon
    (42) gfor -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon
    (43) gprint -> . TkPrint strprint TkSemiColon
    (44) gprintln -> . TkPrintln strprint TkSemiColon
    (10) empty -> .

    TkId            shift and go to state 17
    TkFor           shift and go to state 11
    TkPrint         shift and go to state 12
    TkPrintln       shift and go to state 13
    TkCBlock        reduce using rule 10 (empty -> .)

    start                          shift and go to state 14
    declaration                    shift and go to state 15
    body                           shift and go to state 16
    assign                         shift and go to state 5
    gfor                           shift and go to state 6
    gprint                         shift and go to state 7
    gprintln                       shift and go to state 8
    empty                          shift and go to state 9

state 4

    (2) block -> TkOBlock body . TkCBlock

    TkCBlock        shift and go to state 18


state 5

    (3) body -> assign . body
    (3) body -> . assign body
    (4) body -> . gfor body
    (5) body -> . gprint body
    (6) body -> . gprintln body
    (7) body -> . empty
    (17) assign -> . TkId TkAsig expression TkSemiColon
    (18) assign -> . TkId TkAsig strexp TkSemiColon
    (19) assign -> . TkId TkAsig array TkSemiColon
    (42) gfor -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon
    (43) gprint -> . TkPrint strprint TkSemiColon
    (44) gprintln -> . TkPrintln strprint TkSemiColon
    (10) empty -> .

    TkId            shift and go to state 10
    TkFor           shift and go to state 11
    TkPrint         shift and go to state 12
    TkPrintln       shift and go to state 13
    TkCBlock        reduce using rule 10 (empty -> .)

    assign                         shift and go to state 5
    body                           shift and go to state 19
    gfor                           shift and go to state 6
    gprint                         shift and go to state 7
    gprintln                       shift and go to state 8
    empty                          shift and go to state 9

state 6

    (4) body -> gfor . body
    (3) body -> . assign body
    (4) body -> . gfor body
    (5) body -> . gprint body
    (6) body -> . gprintln body
    (7) body -> . empty
    (17) assign -> . TkId TkAsig expression TkSemiColon
    (18) assign -> . TkId TkAsig strexp TkSemiColon
    (19) assign -> . TkId TkAsig array TkSemiColon
    (42) gfor -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon
    (43) gprint -> . TkPrint strprint TkSemiColon
    (44) gprintln -> . TkPrintln strprint TkSemiColon
    (10) empty -> .

    TkId            shift and go to state 10
    TkFor           shift and go to state 11
    TkPrint         shift and go to state 12
    TkPrintln       shift and go to state 13
    TkCBlock        reduce using rule 10 (empty -> .)

    gfor                           shift and go to state 6
    body                           shift and go to state 20
    assign                         shift and go to state 5
    gprint                         shift and go to state 7
    gprintln                       shift and go to state 8
    empty                          shift and go to state 9

state 7

    (5) body -> gprint . body
    (3) body -> . assign body
    (4) body -> . gfor body
    (5) body -> . gprint body
    (6) body -> . gprintln body
    (7) body -> . empty
    (17) assign -> . TkId TkAsig expression TkSemiColon
    (18) assign -> . TkId TkAsig strexp TkSemiColon
    (19) assign -> . TkId TkAsig array TkSemiColon
    (42) gfor -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon
    (43) gprint -> . TkPrint strprint TkSemiColon
    (44) gprintln -> . TkPrintln strprint TkSemiColon
    (10) empty -> .

    TkId            shift and go to state 10
    TkFor           shift and go to state 11
    TkPrint         shift and go to state 12
    TkPrintln       shift and go to state 13
    TkCBlock        reduce using rule 10 (empty -> .)

    gprint                         shift and go to state 7
    body                           shift and go to state 21
    assign                         shift and go to state 5
    gfor                           shift and go to state 6
    gprintln                       shift and go to state 8
    empty                          shift and go to state 9

state 8

    (6) body -> gprintln . body
    (3) body -> . assign body
    (4) body -> . gfor body
    (5) body -> . gprint body
    (6) body -> . gprintln body
    (7) body -> . empty
    (17) assign -> . TkId TkAsig expression TkSemiColon
    (18) assign -> . TkId TkAsig strexp TkSemiColon
    (19) assign -> . TkId TkAsig array TkSemiColon
    (42) gfor -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon
    (43) gprint -> . TkPrint strprint TkSemiColon
    (44) gprintln -> . TkPrintln strprint TkSemiColon
    (10) empty -> .

    TkId            shift and go to state 10
    TkFor           shift and go to state 11
    TkPrint         shift and go to state 12
    TkPrintln       shift and go to state 13
    TkCBlock        reduce using rule 10 (empty -> .)

    gprintln                       shift and go to state 8
    body                           shift and go to state 22
    assign                         shift and go to state 5
    gfor                           shift and go to state 6
    gprint                         shift and go to state 7
    empty                          shift and go to state 9

state 9

    (7) body -> empty .

    TkCBlock        reduce using rule 7 (body -> empty .)


state 10

    (17) assign -> TkId . TkAsig expression TkSemiColon
    (18) assign -> TkId . TkAsig strexp TkSemiColon
    (19) assign -> TkId . TkAsig array TkSemiColon

    TkAsig          shift and go to state 23


state 11

    (42) gfor -> TkFor . TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon

    TkId            shift and go to state 24


state 12

    (43) gprint -> TkPrint . strprint TkSemiColon
    (45) strprint -> . TkString TkConcat strprint
    (46) strprint -> . TkId TkConcat strprint
    (47) strprint -> . TkString
    (48) strprint -> . TkId

    TkString        shift and go to state 26
    TkId            shift and go to state 27

    strprint                       shift and go to state 25

state 13

    (44) gprintln -> TkPrintln . strprint TkSemiColon
    (45) strprint -> . TkString TkConcat strprint
    (46) strprint -> . TkId TkConcat strprint
    (47) strprint -> . TkString
    (48) strprint -> . TkId

    TkString        shift and go to state 26
    TkId            shift and go to state 27

    strprint                       shift and go to state 28

state 14

    (1) block -> TkOBlock TkDeclare start . TkCBlock

    TkCBlock        shift and go to state 29


state 15

    (8) start -> declaration . start
    (8) start -> . declaration start
    (9) start -> . body
    (11) declaration -> . TkId TkTwoPoints tipo TkSemiColon
    (12) declaration -> . TkId TkComma listaid TkTwoPoints tipo TkSemiColon
    (3) body -> . assign body
    (4) body -> . gfor body
    (5) body -> . gprint body
    (6) body -> . gprintln body
    (7) body -> . empty
    (17) assign -> . TkId TkAsig expression TkSemiColon
    (18) assign -> . TkId TkAsig strexp TkSemiColon
    (19) assign -> . TkId TkAsig array TkSemiColon
    (42) gfor -> . TkFor TkId TkIn expression TkTo expression TkArrow block TkRof TkSemiColon
    (43) gprint -> . TkPrint strprint TkSemiColon
    (44) gprintln -> . TkPrintln strprint TkSemiColon
    (10) empty -> .

    TkId            shift and go to state 17
    TkFor           shift and go to state 11
    TkPrint         shift and go to state 12
    TkPrintln       shift and go to state 13
    TkCBlock        reduce using rule 10 (empty -> .)

    declaration                    shift and go to state 15
    start                          shift and go to state 30
    body                           shift and go to state 16
    assign                         shift and go to state 5
    gfor                           shift and go to state 6
    gprint                         shift and go to state 7
    gprintln                       shift and go to state 8
    empty                          shift and go to state 9

state 16

    (9) start -> body .

    TkCBlock        reduce using rule 9 (start -> body .)


state 17

    (11) declaration -> TkId . TkTwoPoints tipo TkSemiColon
    (12) declaration -> TkId . TkComma listaid TkTwoPoints tipo TkSemiColon
    (17) assign -> TkId . TkAsig expression TkSemiColon
    (18) assign -> TkId . TkAsig strexp TkSemiColon
    (19) assign -> TkId . TkAsig array TkSemiColon

    TkTwoPoints     shift and go to state 31
    TkComma         shift and go to state 32
    TkAsig          shift and go to state 23


state 18

    (2) block -> TkOBlock body TkCBlock .

    $end            reduce using rule 2 (block -> TkOBlock body TkCBlock .)
    TkRof           reduce using rule 2 (block -> TkOBlock body TkCBlock .)


state 19

    (3) body -> assign body .

    TkCBlock        reduce using rule 3 (body -> assign body .)


state 20

    (4) body -> gfor body .

    TkCBlock        reduce using rule 4 (body -> gfor body .)


state 21

    (5) body -> gprint body .

    TkCBlock        reduce using rule 5 (body -> gprint body .)


state 22

    (6) body -> gprintln body .

    TkCBlock        reduce using rule 6 (body -> gprintln body .)


state 23

    (17) assign -> TkId TkAsig . expression TkSemiColon
    (18) assign -> TkId TkAsig . strexp TkSemiColon
    (19) assign -> TkId TkAsig . array TkSemiColon
    (26) expression -> . expression TkPlus expression
    (27) expression -> . expression TkMinus expression
    (28) expression -> . expression TkMult expression
    (29) expression -> . expression TkDiv expression
    (30) expression -> . expression TkMod expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkLeq expression
    (33) expression -> . expression TkGeq expression
    (34) expression -> . expression TkGreater expression
    (35) expression -> . TkOpenPar expression TkClosePar
    (36) expression -> . TkSize TkOpenPar array TkClosePar
    (37) expression -> . TkMax TkOpenPar array TkClosePar
    (38) expression -> . TkMin TkOpenPar array TkClosePar
    (39) expression -> . TkAtoi TkOpenPar array TkClosePar
    (40) expression -> . TkNum
    (41) expression -> . TkId
    (24) strexp -> . TkString TkConcat strexp
    (25) strexp -> . TkString
    (20) array -> . TkOBracket inarray TkCBracket
    (21) array -> . TkOBracket TkNum TkSoForth TkNum TkCBracket

    TkOpenPar       shift and go to state 37
    TkSize          shift and go to state 38
    TkMax           shift and go to state 39
    TkMin           shift and go to state 40
    TkAtoi          shift and go to state 41
    TkNum           shift and go to state 42
    TkId            shift and go to state 33
    TkString        shift and go to state 43
    TkOBracket      shift and go to state 44

    expression                     shift and go to state 34
    strexp                         shift and go to state 35
    array                          shift and go to state 36

state 24

    (42) gfor -> TkFor TkId . TkIn expression TkTo expression TkArrow block TkRof TkSemiColon

    TkIn            shift and go to state 45


state 25

    (43) gprint -> TkPrint strprint . TkSemiColon

    TkSemiColon     shift and go to state 46


state 26

    (45) strprint -> TkString . TkConcat strprint
    (47) strprint -> TkString .

    TkConcat        shift and go to state 47
    TkSemiColon     reduce using rule 47 (strprint -> TkString .)


state 27

    (46) strprint -> TkId . TkConcat strprint
    (48) strprint -> TkId .

    TkConcat        shift and go to state 48
    TkSemiColon     reduce using rule 48 (strprint -> TkId .)


state 28

    (44) gprintln -> TkPrintln strprint . TkSemiColon

    TkSemiColon     shift and go to state 49


state 29

    (1) block -> TkOBlock TkDeclare start TkCBlock .

    $end            reduce using rule 1 (block -> TkOBlock TkDeclare start TkCBlock .)
    TkRof           reduce using rule 1 (block -> TkOBlock TkDeclare start TkCBlock .)


state 30

    (8) start -> declaration start .

    TkCBlock        reduce using rule 8 (start -> declaration start .)


state 31

    (11) declaration -> TkId TkTwoPoints . tipo TkSemiColon
    (15) tipo -> . TkInt
    (16) tipo -> . TkArray TkOBracket TkNum TkSoForth TkNum TkCBracket

    TkInt           shift and go to state 51
    TkArray         shift and go to state 52

    tipo                           shift and go to state 50

state 32

    (12) declaration -> TkId TkComma . listaid TkTwoPoints tipo TkSemiColon
    (13) listaid -> . TkId TkComma listaid
    (14) listaid -> . TkId

    TkId            shift and go to state 53

    listaid                        shift and go to state 54

state 33

    (41) expression -> TkId .

    TkSemiColon     reduce using rule 41 (expression -> TkId .)
    TkPlus          reduce using rule 41 (expression -> TkId .)
    TkMinus         reduce using rule 41 (expression -> TkId .)
    TkMult          reduce using rule 41 (expression -> TkId .)
    TkDiv           reduce using rule 41 (expression -> TkId .)
    TkMod           reduce using rule 41 (expression -> TkId .)
    TkLess          reduce using rule 41 (expression -> TkId .)
    TkLeq           reduce using rule 41 (expression -> TkId .)
    TkGeq           reduce using rule 41 (expression -> TkId .)
    TkGreater       reduce using rule 41 (expression -> TkId .)
    TkClosePar      reduce using rule 41 (expression -> TkId .)
    TkTo            reduce using rule 41 (expression -> TkId .)
    TkArrow         reduce using rule 41 (expression -> TkId .)


state 34

    (17) assign -> TkId TkAsig expression . TkSemiColon
    (26) expression -> expression . TkPlus expression
    (27) expression -> expression . TkMinus expression
    (28) expression -> expression . TkMult expression
    (29) expression -> expression . TkDiv expression
    (30) expression -> expression . TkMod expression
    (31) expression -> expression . TkLess expression
    (32) expression -> expression . TkLeq expression
    (33) expression -> expression . TkGeq expression
    (34) expression -> expression . TkGreater expression

    TkSemiColon     shift and go to state 55
    TkPlus          shift and go to state 56
    TkMinus         shift and go to state 57
    TkMult          shift and go to state 58
    TkDiv           shift and go to state 59
    TkMod           shift and go to state 60
    TkLess          shift and go to state 61
    TkLeq           shift and go to state 62
    TkGeq           shift and go to state 63
    TkGreater       shift and go to state 64


state 35

    (18) assign -> TkId TkAsig strexp . TkSemiColon

    TkSemiColon     shift and go to state 65


state 36

    (19) assign -> TkId TkAsig array . TkSemiColon

    TkSemiColon     shift and go to state 66


state 37

    (35) expression -> TkOpenPar . expression TkClosePar
    (26) expression -> . expression TkPlus expression
    (27) expression -> . expression TkMinus expression
    (28) expression -> . expression TkMult expression
    (29) expression -> . expression TkDiv expression
    (30) expression -> . expression TkMod expression
    (31) expression -> . expression TkLess expression
    (32) expression -> . expression TkLeq expression
    (33) expression -> . expression TkGeq expression
    (34) expression -> . expression TkGreater expression
    (35) expression -> . TkOpenPar expression TkClosePar
    (36) expression -> . TkSize TkOpenPar array TkClosePar
    (37) expression -> . TkMax TkOpenPar array TkClosePar
    (38) expression -> . TkMin TkOpenPar array TkClosePar
    (39) expression -> . TkAtoi TkOpenPar array TkClosePar
    (40) expression -> . TkNum
    (41) expression -> . TkId
